@@ -20,6 +20,14 @@ function renderDocuments(data) {
                 <td>${document.sender_name}</td>
                 <td>${document.upload_date_decorated}</td>
                 <td>${document.description}</td>
+                <td>
+                    <a class="edit-document" data-course-id="${document.course}" data-sender-id="${document.sender}"  data-title="${document.title}" data-description="${document.description}"
+                        style="cursor: pointer">
+                        <i class="fas fa-edit text-info"></i>
+                    </a>
+                 </td>
+                <td><a class="delete-document" data-course-id="${document.course}"style="cursor: pointer"><i class="fas fa-trash-alt text-danger"></i></a>
+                </td>
                 <td style="text-align:center"><a href="${document.upload_document}" target="_blank">
                     <img src="/static/home/images/icons/download.svg" width="20" height="20"></a>
                 </td>
@@ -31,16 +39,14 @@ function renderDocuments(data) {
 
     fileManagerTemplate = `
     <div class="container">
-        <div class="row mb-2">
-            <div class="col-md-1 file-manager-image">
+        <div id="fileManagerTitle"  class="row mb-2">
+            <div class="d-flex col-md-5 file-manager-image">
                 <img src="${data.course.image}" width="50" height="50">
+                <div class="ml-2">
+                    <p class="m-0"><strong>${data.course.title}</strong></p>
+                    <h6 class="p-0"><small>${data.course.teacher}</small></h6>         
+                </div>
             </div>
-            <div class="col-md-3 file-manager title">
-                <p class="m-0"><strong>${data.course.title}</strong></p>
-                <h6 class="p-0"><small>${data.course.teacher}</small></h6>
-            </div>
-
-
         </div>
         <div class="table-responsive-sm">
             <table class="table table-hover">
@@ -51,6 +57,8 @@ function renderDocuments(data) {
                     <th scope="col">فرستنده</th>
                     <th scope="col">تاریخ</th>
                     <th scope="col">توضیحات</th>
+                    <th scope="col">حذف</th>
+                    <th scope="col">ویرایش</th>
                     <th scope="col">دانلود</th>
                 </tr>
                 </thead>
@@ -62,6 +70,40 @@ function renderDocuments(data) {
     </div>
 `;
     $("#fileManager").append(fileManagerTemplate);
+    $("#addFileButton").tooltip();
+    addFileUploadButton();
+    deleteDocuments();
+    editDocuments();
+}
+
+function addFileUploadButton() {
+    let fileUploadButtonTemplate = `
+    <div  id="addFileButton" class="ml-auto" data-toggle="tooltip" data-placement="top" title="اضافه کردن جزوه">
+        <img class="mt-3 mr-md-5" src="/static/home/images/icons/plus.svg" width="35" height="35">
+    </div>
+    `;
+    $("#fileManagerTitle").append(fileUploadButtonTemplate);
+    // fire modal with button
+    $("#addFileButton").click(function () {
+        $("#uploadModal").modal();
+    });
+}
+
+// delete documents
+function deleteDocuments() {
+    $(".delete-document").click(function () {
+
+    })
+}
+
+function editDocuments() {
+    $(".edit-document").click(function () {
+        $("#editTitle").val($(this).data("title"));
+        $("#editDescription").val($(this).data("description"));
+        $("#editCourse").val($(this).data("course-id"));
+        $("#editSender").val($(this).data("sender-id"));
+        $("#editModal").modal();
+    })
 }
 
 function fileManagerRender() {
