@@ -8,7 +8,6 @@
 .upload-drop-zone {
     color: #ccc;
     border-style: dashed;
-    border-color: #ccc;
     text-align: center
 }
 
