@@ -67,6 +67,8 @@ INSTALLED_APPS = [
     'django.contrib.messages',
     'django.contrib.staticfiles',
     'django_jalali',
+    'tinymce',
+    'drf_yasg',
 ]
 
 MIDDLEWARE = [
