@@ -49,14 +49,8 @@
                     <div class="col-md-8">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="account-title-name">{% if teacher %}
-                                    استاد {% endif %}{{ request.user.get_full_name }}
-                                <p>
-                            </div>
-                            <div class="col-md-12">
-                                <!-- Give grade title from m2m field grade -->
-                                <p class="account-title-grade">
-                                    {% for grade in request.user.grades.all %}{{ grade }}{% endfor %}
+                                <p class="account-title-name mt-2">{% if teacher %}استاد{% endif %}<p>
+                                <p class="account-title-name mt-n4">{{ request.user.get_full_name }}</p>
                             </div>
                         </div>
                     </div>
