@@ -23,6 +23,7 @@
             <button class="tab-link" data-content="#studentsList">لیست دانش آموزان</button>
             <button class="tab-link">کلاس بعدی</button>
         </div>
+        <hr class="border-top border-dark m-0" style="border: 2px solid;">
         <!-- file manager tab -->
         <div id="fileManager" class="tab-content active">
         </div>
@@ -77,34 +78,103 @@
     {#        </div>#}
 
 
-    <!-- Modal -->
+    <!-- add new file modal -->
     <div class="modal fade" id="uploadModal" tabindex="-1" role="dialog"
          aria-labelledby="uploadModalTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title vazir-medium" id="uploadModalTitle">اضافه کردن جزوه ی جدید</h5>
+                    <h5 class="modal-title vazir-medium" id="uploadModalTitle">اضافه کردن جزوه</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <form action="google.com">
+                <form id="documentUploadForm" action="#" enctype="multipart/form-data">
+                    {% csrf_token %}
                     <div class="modal-body">
-                        <label for="name">
-                            <h6>عنوان جزوه </h6>
-                        </label><br>
-                        <input class="input" type="text" id="name" name="name"><br>
+                        <div class="form-group">
+                            <label class="mr-2 vazir-bold" for="title">عنوان جزوه</label>
+                            <input class="form-control w-100" type="text" id="title" name="title"
+                                   placeholder="مثال: فصل اول - ریاضی دهم">
+                        </div>
                         <hr>
-                        <h6 class="mb-3">توضیحات </h6>
-                        <textarea class="input width" name="description" id="description"
-                                  rows="5"></textarea>
+                        <div class="form-group">
+                            <label class="mr-2 vazir-bold" for="description">توضیحات</label>
+                            <textarea class="form-control" name="description" id="description"
+                                      rows="4" placeholder="توضیحات مربوط به جزوه را در این قسمت بنویسید."></textarea>
+                        </div>
                         <hr>
+
+                        <!-- drag upload append to this div -->
+                        <div class="drop-zone"></div>
+
+                        <div class="modal-footer justify-content-center">
+                            <!-- upload file -->
+                            <span id="uploadLoading" class="spinner-grow spinner-grow-sm" style="display: none"></span>
+                            <button id="uploadSubmit" class="btn btn-success" type="submit">ارسال جزوه</button>
+                            <button class="btn btn-danger" data-dismiss="modal">لغو</button>
+                        </div>
+                        <div id="uploadFailedAlert" class="text-center m-0" style="display: none">
+                            <small class="text-danger">
+                                <i class="fas fa-exclamation-triangle mr-1"></i>
+                                ارسال فایل به مشکل خورده است ! دوباره امتحان کنید
+                            </small>
+                        </div>
                     </div>
-                    <div class="modal-footer justify-content-center">
-                        <!-- upload file -->
-                        <button class="btn btn-success" type="submit">ذخیره</button>
-                        <button class="btn btn-danger" type="reset">لغو</button>
+                    <input type="number" value="6" name="course" hidden>
+                    <input type="number" value="3" name="sender" hidden>
+                </form>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- edit document modal -->
+    <div class="modal fade" id="editModal" tabindex="-1" role="dialog"
+         aria-labelledby="editModalTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title vazir-medium" id="editModalTitle">تغییر جزوه ی آپلود شده</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <form id="documentUploadForm" action="#" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label class="mr-2 vazir-bold" for="editTitle">عنوان جزوه جدید</label>
+                            <input class="form-control w-100" type="text" id="editTitle" name="title">
+                        </div>
+                        <hr>
+                        <div class="form-group">
+                            <label class="mr-2 vazir-bold" for="editDescription">توضیحات جدید</label>
+                            <textarea class="form-control" name="description" id="editDescription"
+                                      rows="4"></textarea>
+                        </div>
+                        <hr>
+
+                        <!-- drag upload append to this div -->
+                        <div class="drop-zone">
+                            <label class="mr-2 vazir-bold" for="description">در صورت تغییر دادن جزوه، فایل جدید را آپلود کنید.</label>
+                        </div>
+
+                        <div class="modal-footer justify-content-center">
+                            <!-- upload file -->
+                            <span id="uploadLoading" class="spinner-grow spinner-grow-sm" style="display: none"></span>
+                            <button id="uploadSubmit" class="btn btn-success" type="submit">ثبت تغییرات</button>
+                            <button class="btn btn-danger" data-dismiss="modal">لغو</button>
+                        </div>
+                        <div id="uploadFailedAlert" class="text-center m-0" style="display: none">
+                            <small class="text-danger">
+                                <i class="fas fa-exclamation-triangle mr-1"></i>
+                                ارسال فایل به مشکل خورده است ! دوباره امتحان کنید
+                            </small>
+                        </div>
                     </div>
+                    <input type="number" id="editCourse"  name="course" hidden>
+                    <input type="number" id="editSender" name="sender" hidden>
                 </form>
             </div>
         </div>
